--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resizable": "^3.0.4",
     "react-rnd": "^10.3.3",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.4",
@@ -21,7 +22,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:styles": "postcss src/styles/tailwind.css -o src/styles/styles.css",
+    "prebuild": "npm run build:styles",
+    "prestart": "npm run build:styles"
   },
   "eslintConfig": {
     "extends": [
@@ -42,12 +46,17 @@
     ]
   },
   "devDependencies": {
+    "@types/react-resizable": "^1.7.2",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
+    "autoprefixer": "^10.2.6",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
-    "prettier": "2.3.1"
+    "postcss": "^8.3.5",
+    "postcss-cli": "^8.3.1",
+    "prettier": "2.3.1",
+    "tailwindcss": "^2.2.4"
   }
 }
